make sure loading indicator is visible even if mobile zoom is active

--- a/static/styles.css
+++ b/static/styles.css
@@ -54,16 +54,12 @@ td, th {
 }
 
 #loading_indicator{
-    display: flex;
-    justify-content: center;
     position: fixed;
-    top: 1em;
-    width: 100%;
     z-index: 999;
-}
-
-#loading_indicator > div{
     border-radius: 5px;
     background-color: lightgray;
     padding: 5px;
+    top: 25px;
+    left: 25px;
+
 }
